@@ -1,5 +1,11 @@
 In kpanel-0.18:
 
+    Patchlevel 3:
+       - autohide feature for the taskbar
+               AutoHideTaskbar=on/off
+         The provisional panel config dialog also offers a checkbox
+         for this feature.
+
     Patchlevel 2:
        - autohide feature for the panel
                AutoHide=on/off
